# Vacancy_Parcer_DB

./: .gitignore  README.md  main.py  pyproject.toml
src/: API_classes.py  DB_classes.py  VC_classes.py  config.py  create_tab.sql  create_tabs.sql  utills.py  utils.py
