[tool.poetry]
name = "pythonproject4"
version = "0.1.0"
description = ""
authors = ["Lana Virina <lana.virina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
pandas = "^2.2.3"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
pytest = "^8.3.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.11.2"
isort = "^5.13.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true

[tool.black]
line_length = 119

[tool.isort]
line_length = 119

[tool.flake8]
line_length = 119